--- a/features/layout/page-container/page-container.module.scss
+++ b/features/layout/page-container/page-container.module.scss
@@ -4,52 +4,6 @@
 @use "@styles/breakpoint";
 @use "@styles/misc";
 
-// .container {
-//   display: flex;
-//   min-height: 100vh; // Full height of the viewport
-// }
-
-// .sidebar {
-//   width: 250px; // Fixed width for the sidebar
-//   background: color.$gray-900;
-//   position: relative;
-//   z-index: 2; // Ensure sidebar stays above other content
-
-//   &.isCollapsed {
-//     width: 83px;
-//   }
-// }
-
-// .contentWrapper {
-//   flex: 1;
-//   display: flex;
-//   flex-direction: column;
-//   position: relative;
-//   margin-left: 50px; // Matches the sidebar width when expanded
-
-//   &.isCollapsed {
-//     margin-left: 83px; // Matches the collapsed sidebar width
-//   }
-// }
-
-// .main {
-//   flex: 1; // Main content takes up remaining space
-// }
-
-// .contentContainer {
-//   flex: 1;
-//   margin-top: misc.$header-height;
-//   padding: space.$s8 space.$s3;
-//   background: white;
-//   overflow: hidden; // Ensure no content overflows
-
-//   @media (min-width: breakpoint.$desktop) {
-//     margin-top: 0; // Remove top margin for desktop
-//     padding: space.$s8;
-//     border-top-left-radius: space.$s10;
-//   }
-// }
-
 .container {
   display: flex;
   min-height: 100vh; // Full height of the viewport
@@ -62,12 +16,12 @@
   z-index: 2;
 
   &.isCollapsed {
-    width: 83px; // Collapsed width (match with sidebar-navigation.module.scss)
+    width: 83px;
   }
 
   @media (width >= 405px) and (width <= 1023px) {
-    width: 0; // Set the width to 0px for screens between 405px and 1023px
-    transition: width 300ms ease-in-out; // Add a smooth transition when hiding
+    width: 0;
+    transition: width 300ms ease-in-out;
   }
 }
 
@@ -76,10 +30,10 @@
   display: flex;
   flex-direction: column;
   position: relative;
-  margin-left: 30px; // Matches expanded sidebar width
+  margin-left: 30px;
 
   &.isCollapsed {
-    margin-left: 0; // Matches collapsed sidebar width
+    margin-left: 0;
   }
 }
 
@@ -94,23 +48,67 @@
   background: white;
   overflow: hidden;
 
+  .title {
+    margin-top: 0;
+    margin-bottom: 4px;
+  }
+
   @media (min-width: breakpoint.$desktop) {
     margin-top: 0;
     padding: space.$s8;
     border-top-left-radius: space.$s10;
+
+    .info {
+      margin-top: 4px;
+      margin-bottom: 24px;
+    }
   }
 
   @media (width <= 1023px) {
-    margin-left: -30px; // Reset any left margin
-    padding-left: 10px; // Add a small padding to the left side
-    padding-right: 10px; // Maintain balance with right padding
+    margin-left: -30px;
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+}
+
+.info {
+  font: font.$text-sm-regular;
+  line-height: 1.5;
+
+  .breakText {
+    display: inline; // Default display for larger screens
+
+    // Force a break at "events" for Issues or "alert" for Project
+    &.breakAtEvents {
+      word-wrap: break-word;
+      white-space: normal;
+    }
+
+    @media (width <= 1023px) {
+      // Mobile view
+      &.breakAtEvents {
+        display: block; // Force the text to break into a new line
+      }
+    }
+
+    &.breakAtAlert {
+      word-wrap: break-word;
+      white-space: normal;
+    }
+
+    @media (width <= 1023px) {
+      // Mobile view
+      &.breakAtAlert {
+        display: block; // Force the text to break into a new line
+      }
+    }
   }
 }
 
 .footer {
-  margin-left: 250px; // Expanded state
+  margin-left: 250px;
 
   &.isCollapsed {
-    margin-left: 83px; // Collapsed state
+    margin-left: 83px;
   }
 }
