--- a/pages/index.module.scss
+++ b/pages/index.module.scss
@@ -1,13 +1,8 @@
-.header {
-  width: 100%;
-  height: 80px;
-  padding: 0 2rem;
-  box-sizing: border-box;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  background: white;
-}
+@use "@styles/color";
+@use "@styles/space";
+@use "@styles/breakpoint";
+@use "@styles/z-index";
+@use "@styles/misc";
 
 .contactButton {
   position: absolute;
