--- a/features/ui/new_button/new-button.module.scss
+++ b/features/ui/new_button/new-button.module.scss
@@ -244,4 +244,10 @@
       margin: 0;
     }
   }
+
+  @media (width <= 320px) {
+    &.primary {
+      width: 80%; /* Adjust width for small screens */
+    }
+  }
 }
