--- a/pages/index.module.scss
+++ b/pages/index.module.scss
@@ -1,8 +1,9 @@
-@use "@styles/color";
-@use "@styles/space";
-@use "@styles/breakpoint";
+@use "styles/breakpoint";
+@use "styles/color";
+@use "styles/font";
+@use "styles/misc";
+@use "styles/space";
 @use "@styles/z-index";
-@use "@styles/misc";
 
 .contactButton {
   position: absolute;
@@ -18,4 +19,40 @@
   &:hover {
     background: #6941c6;
   }
+}
+
+.heroWrapper {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+
+  // padding: 0 0; // 96px vertical padding
+  min-height: 100vh; // Ensures the content takes up the full viewport height
+  text-align: center; // Center-aligns text within elements
+  margin-top: -120px;
+}
+
+.heroTitle {
+  color: color.$gray-900;
+  text-align: center;
+  font: font.$display-xl-semibold;
+  letter-spacing: -1.2px;
+  align-self: stretch; // This ensures the element stretches as needed
+  margin: 0;
+}
+
+.subTitle {
+  color: color.$gray-500;
+  text-align: center;
+  font: font.$text-xl-normal;
+  width: 648px;
+  margin-bottom: 40px;
+}
+
+.content {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 12px;
 }
