--- a/features/ui/new_button/new-button.module.scss
+++ b/features/ui/new_button/new-button.module.scss
@@ -245,9 +245,9 @@
     }
   }
 
-  @media (width <= 320px) {
-    &.primary {
-      width: 80%; /* Adjust width for small screens */
-    }
-  }
+  // @media (width <= 320px) {
+  //   &.primary {
+  //     width: 80%; /* Adjust width for small screens */
+  //   }
+  // }
 }
