--- a/styles/font.scss
+++ b/styles/font.scss
@@ -35,6 +35,9 @@ $text-lg-regular:
 $text-lg-medium:
   500 1.125rem/1.75rem inter,
   sans-serif; // 18px font size, medium weight
+$text-lg-normal:
+  400 1.125rem/1.75rem inter,
+  sans-serif; // 18px font size, 28px line height
 
 $text-xl-normal:
   400 1.25rem/1.875rem inter,
