--- a/pages/index.module.scss
+++ b/pages/index.module.scss
@@ -1,8 +1,9 @@
-@use "@styles/color";
-@use "@styles/space";
-@use "@styles/breakpoint";
+@use "styles/breakpoint";
+@use "styles/color";
+@use "styles/font";
+@use "styles/misc";
+@use "styles/space";
 @use "@styles/z-index";
-@use "@styles/misc";
 
 .contactButton {
   position: absolute;
@@ -18,4 +19,64 @@
   &:hover {
     background: #6941c6;
   }
+}
+
+.heroWrapper {
+  display: flex;
+  flex-direction: column;
+  align-items: center; // Ensures content is centered horizontally
+  justify-content: center; // Centers vertically if needed
+  text-align: center; // Ensures text is centered
+  width: 100%; // Ensures it doesn't shrink
+  max-width: 1160px; // Adjust based on your design
+  margin: 0 auto; // Centers the wrapper itself
+  padding: 0 space.$s4; // Adds consistent spacing
+
+  @media (width < 1024px) {
+    padding: 0 10rem; // Adjust for smaller screens
+  }
+}
+
+.heroTitle {
+  color: color.$gray-900;
+  text-align: center;
+  font: font.$display-xl-semibold;
+  letter-spacing: -1.2px;
+  align-self: stretch;
+  margin: 0 auto; // Ensure it's centered
+  max-width: 100%; // Keep full width on desktop
+
+  @media (width < 1024px) {
+    font: font.$display-md-semibold;
+    max-width: 14ch; // Ensures a proper break
+    white-space: normal;
+    word-wrap: break-word;
+    margin: 0 auto; // This centers it when width is reduced
+    display: block; // Ensures it behaves like a block element
+  }
+}
+
+.subTitle {
+  color: color.$gray-500;
+  text-align: center;
+  font: font.$text-xl-normal;
+  width: 648px;
+  max-width: 100%;
+  margin-bottom: 40px;
+  white-space: normal;
+  word-wrap: break-word;
+
+  @media (width < 1024px) {
+    font: font.$text-lg-normal;
+    max-width: 30ch; // Adjusted so "monitoring" and "by" move to the next line
+    margin: 0 auto; // Ensures it's centered
+    margin-bottom: 20px;
+  }
+}
+
+.content {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 12px;
 }
