--- a/styles/font.scss
+++ b/styles/font.scss
@@ -35,6 +35,13 @@ $text-lg-regular:
 $text-lg-medium:
   500 1.125rem/1.75rem inter,
   sans-serif; // 18px font size, medium weight
+$text-lg-normal:
+  400 1.125rem/1.75rem inter,
+  sans-serif; // 18px font size, 28px line height
+
+$text-xl-normal:
+  400 1.25rem/1.875rem inter,
+  sans-serif; // 20px font size, 30px line height
 
 /* Display */
 $display-sm-regular:
@@ -55,3 +62,6 @@ $display-md-medium:
 $display-md-semibold:
   600 2.25rem/2.75rem inter,
   sans-serif;
+$display-xl-semibold:
+  600 3.75rem/4.5rem inter,
+  sans-serif; // 60px font size, 72px line height
